--- a/webapp/modules/base/base.scss
+++ b/webapp/modules/base/base.scss
@@ -12,6 +12,29 @@
      }
  }
 
+ nav {
+     height: 50px;
+     xborder-bottom: 1px solid #ccc;
+     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 1px 0 rgba(0, 0, 0, .1), 0 2px 1px -1px rgba(0, 0, 0, .1);
+     .nav-content {
+         line-height: 50px;
+         max-width: 80%;
+         margin: 0 auto;
+         .nav-item {
+             padding: 0 15px;
+             display: inline-block;
+             cursor: pointer;
+             transition: all .5s;
+             &:hover {
+                 background: #e9ecef;
+             }
+         }
+         .nav-item.active {
+             background: #e9ecef;
+         }
+     }
+ }
+
  .center-wrapper {
      .center-container {
          max-width: 80%;
