--- a/webapp/modules/home/home.scss
+++ b/webapp/modules/home/home.scss
@@ -1,55 +1,16 @@
 .home {
     padding: 15px 0;
-    /*progressbar*/
-    #progressbar {
-        margin-bottom: 30px;
-        overflow: hidden;
-        counter-reset: step;
-        li {
-            list-style-type: none;
-            color: #000;
-            text-transform: uppercase;
-            float: left;
-            position: relative;
-            letter-spacing: 1px;
-            &::after {
-                content: '';
-                width: 100%;
-                height: 2px;
-                background: red;
-                position: absolute;
-                left: -50%;
-                top: 12px;
-                z-index: -1;
-                /*put it behind the numbers*/
-            }
-            &::before {
-                content: counter(step);
-                counter-increment: step;
-                width: 24px;
-                height: 24px;
-                line-height: 26px;
-                display: block;
-                font-size: 12px;
-                color: #333;
-                background: white;
-                border-radius: 25px;
-                margin: 0 auto 10px auto;
-                text-align: center;
-            }
-            &:first-child {
-                &::after {
-                    /*connector not needed before the first step*/
-                    content: none;
-                }
-            }
+    .comments {
+        margin-top: 2em;
+        hr{
+            margin-bottom: 1.5em;
+            margin-top: 0 !important;
         }
-        .active {
-            &::after,
-            &::before {
-                background: #ee0979;
-                color: white;
-            }
+        .comment-item{
+            border: 1px solid #ccc;
+            border-radius: 12px;
+            padding: 12px;
+            margin-top: 1.5em;
         }
     }
 }
