--- a/webapp/modules/login/login.scss
+++ b/webapp/modules/login/login.scss
@@ -25,7 +25,7 @@
                 background: #fff;
                 border-color: #d0d0d0;
                 padding: 15px;
-                    box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
+                box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
                 .outer-div {
                     position: relative;
                     text-align: center;
