--- a/webapp/modules/style.scss
+++ b/webapp/modules/style.scss
@@ -2,6 +2,7 @@
 @import "base/base.scss";
 @import "login/login.scss";
 @import "home/home.scss";
+@import "workbook/workbook.scss";
 @import "../node_modules/font-awesome/css/font-awesome.min.css";
 @import "../node_modules/angular-material/angular-material.min.css";
 @import "../vendor/styles/bootstrap.min.css";
