--- a/webapp/modules/base/base.scss
+++ b/webapp/modules/base/base.scss
@@ -14,7 +14,7 @@
 
  nav {
      height: 50px;
-     xborder-bottom: 1px solid #ccc;
+     background: #fff;
      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 1px 0 rgba(0, 0, 0, .1), 0 2px 1px -1px rgba(0, 0, 0, .1);
      .nav-content {
          line-height: 50px;
