--- a/webapp/modules/workbook/workbook.scss
+++ b/webapp/modules/workbook/workbook.scss
@@ -7,16 +7,17 @@
         counter-reset: step;
         li {
             list-style-type: none;
-            color: #000;
-            text-transform: uppercase;
+            color: #ccc;
+            text-transform: capitalize;
             float: left;
             position: relative;
             letter-spacing: 1px;
+            text-align: center;
             &::after {
                 content: '';
                 width: 100%;
                 height: 2px;
-                background: red;
+                background: #ccc;
                 position: absolute;
                 left: -50%;
                 top: 12px;
@@ -26,16 +27,18 @@
             &::before {
                 content: counter(step);
                 counter-increment: step;
-                width: 24px;
-                height: 24px;
-                line-height: 26px;
+                width: 30px;
+                height: 30px;
+                line-height: 30px;
                 display: block;
                 font-size: 12px;
-                color: #333;
+                color: #ccc;
                 background: white;
+                border: 1px solid #ccc;
                 border-radius: 25px;
                 margin: 0 auto 10px auto;
                 text-align: center;
+                cursor: pointer;
             }
             &:first-child {
                 &::after {
@@ -45,9 +48,10 @@
             }
         }
         .active {
+            color: #28a745!important;
             &::after,
             &::before {
-                background: #ee0979;
+                background: #28a745!important;
                 color: white;
             }
         }
