--- a/webapp/modules/style.scss
+++ b/webapp/modules/style.scss
@@ -1,6 +1,7 @@
 @import 'variable.scss';
 @import "base/base.scss";
 @import "login/login.scss";
+@import "register/register.scss";
 @import "home/home.scss";
 @import "adminHome/adminHome.scss";
 @import "workbook/workbook.scss";
