added mentor and admin modules

--- a/webapp/modules/style.scss
+++ b/webapp/modules/style.scss
@@ -3,6 +3,7 @@
 @import "login/login.scss";
 @import "register/register.scss";
 @import "home/home.scss";
+@import "mentorHome/mentorHome.scss";
 @import "adminHome/adminHome.scss";
 @import "workbook/workbook.scss";
 @import "../node_modules/font-awesome/css/font-awesome.min.css";
