--- a/webapp/modules/register/register.scss
+++ b/webapp/modules/register/register.scss
@@ -17,6 +17,8 @@
         background-image: url(../../images/login/bg-01.jpg);
         background-size: cover;
         background-repeat: no-repeat;
+        overflow-y: auto;
+        overflow-x: hidden;
         .loginBx_wrapper {
             height: 100%;
             .loginBx {
