--- a/webapp/modules/admin/admin.scss
+++ b/webapp/modules/admin/admin.scss
@@ -7,23 +7,7 @@
         text-align: center;
         margin-top: 1.5em;
     }
-    .comments {
-        margin-top: 2em;
-        hr {
-            margin-bottom: 1.5em;
-            margin-top: 0 !important;
-        }
-        .comment-item {
-            border: 1px solid #ccc;
-            border-radius: 12px;
-            padding: 12px;
-            margin-top: 1.5em;
-            .stage-details {
-                border-radius: 12px;
-                padding: 12px;
-                margin-top: 1em;
-                background: #e9ecef;
-            }
-        }
+    .user-list {
+        margin-top: 2em;        
     }
 }
