mentor and admin dashboard info integration

--- a/webapp/modules/admin/admin.scss
+++ b/webapp/modules/admin/admin.scss
@@ -6,8 +6,12 @@
         padding: 12px;
         text-align: center;
         margin-top: 1.5em;
+        background: #fff;
     }
     .user-list {
-        margin-top: 2em;        
+        margin-top: 2em; 
+        table{
+            background: #fff;
+        }
     }
 }
