--- a/webapp/modules/style.scss
+++ b/webapp/modules/style.scss
@@ -5,6 +5,7 @@
 @import "mentee/mentee.scss";
 @import "mentor/mentor.scss";
 @import "admin/admin.scss";
+@import "admin/competency/competency.scss";
 @import "mentee/workbook/workbook.scss";
 @import "../node_modules/font-awesome/css/font-awesome.min.css";
 @import "../node_modules/angular-material/angular-material.min.css";
