--- a/webapp/modules/mentor/workbook/workbook.scss
+++ b/webapp/modules/mentor/workbook/workbook.scss
@@ -1,4 +1,4 @@
-.workbook {
+.mentorWorkbook {
     padding: 15px 0;
     /*progressbar*/
     #progressbar {
@@ -74,4 +74,5 @@
             }
         }
     }
+
 }
