--- a/webapp/modules/style.scss
+++ b/webapp/modules/style.scss
@@ -7,6 +7,7 @@
 @import "admin/admin.scss";
 @import "admin/competency/competency.scss";
 @import "mentee/workbook/workbook.scss";
+@import "mentor/workbook/workbook.scss";
 @import "../node_modules/font-awesome/css/font-awesome.min.css";
 @import "../node_modules/angular-material/angular-material.min.css";
 @import "../vendor/styles/bootstrap.min.css";
