--- a/webapp/modules/mentee/workbook/workbook.scss
+++ b/webapp/modules/mentee/workbook/workbook.scss
@@ -61,11 +61,15 @@
         .com-header {
             background: #ccc;
             padding: 12px;
+            cursor: pointer;
             input {
                 width: 100%;
                 border: none;
                 background: #ccc;
             }
+        }
+        .btn-answer .bg-white{
+            border: 1px solid #ccc;   
         }
         .active {
             div {
