--- a/webapp/modules/mentee/workbook/workbook.scss
+++ b/webapp/modules/mentee/workbook/workbook.scss
@@ -56,10 +56,18 @@
             }
         }
     }
+    .stage-holder {
+        position: relative;
+    }
+    .controls {
+        position: absolute;
+        right: 0;
+        top: -45px;
+    }
     .com-list {
         margin-bottom: 15px;
         .com-header {
-            background: #ccc;
+            background: #d99594;
             padding: 12px;
             cursor: pointer;
             input {
@@ -68,8 +76,8 @@
                 background: #ccc;
             }
         }
-        .btn-answer .bg-white{
-            border: 1px solid #ccc;   
+        .btn-answer .bg-white {
+            border: 1px solid #ccc;
         }
         .active {
             div {
@@ -78,7 +86,24 @@
             }
         }
     }
-    .table thead th{
+    .add-goals {
+        th {
+            background: #c2d69b;
+            color: #000;
+            border-bottom: 1px solid #32383e;
+        }
+        tbody {
+            background: #eaf1dd;
+        }
+    }
+    .sum-evidence {
+        .com-header {
+            background: #d99594;
+            padding: 12px;
+            cursor: pointer;
+        }
+    }
+    .table thead th {
         vertical-align: middle;
         text-align: center;
     }
